@@ -440,6 +440,28 @@ ArrayDeref(AST *base, AST *index)
     return base;
 }
 
+static AST *
+CalculateCaseTest(AST *casetest, AST *var)
+{
+    AST *ast;
+    if (casetest->kind == AST_EXPRLIST) {
+        ast = CalculateCaseTest(casetest->left, var);
+        if (casetest->right) {
+            ast = AstOperator(K_BOOL_OR, ast,
+                              CalculateCaseTest(casetest->right, var));
+        }
+    } else if (casetest->kind == AST_RANGE) {
+        ast = AstOperator(K_BOOL_AND,
+                          AstOperator(K_GE, var, casetest->left),
+                          AstOperator(K_LE, var, casetest->right));
+    } else if (casetest->kind == AST_OTHER) {
+        ast = AstInteger(1);
+    } else {
+        ast = AstOperator(K_EQ, var, casetest);
+    }
+    return ast;
+}
+
 static void
 doBasicTransform(AST **astptr)
 {
@@ -485,6 +507,7 @@ doBasicTransform(AST **astptr)
             AST *caseitem;
             AST *casetest;
             AST *casebody;
+            AST *iflist;
             if (list->kind != AST_LISTHOLDER) {
                 ERROR(list, "internal error, expected list holder");
             }
@@ -493,25 +516,21 @@ doBasicTransform(AST **astptr)
             doBasicTransform(&caseitem->right);
             casetest = caseitem->left;
             casebody = caseitem->right;
-            if (casetest->kind == AST_RANGE) {
-                casetest = AstOperator(K_BOOL_AND,
-                                       AstOperator(K_GE, var, casetest->left),
-                                       AstOperator(K_LE, var, casetest->right));
-            } else if (casetest->kind == AST_OTHER) {
-                casetest = AstInteger(1);
-            } else {
-                casetest = AstOperator(K_EQ, var, casetest);
-            }
+            casetest = CalculateCaseTest(casetest, var);
             ifholder = NewAST(AST_IF, casetest, NULL);
+            iflist = NewAST(AST_STMTLIST, ifholder, NULL);
             if (!elseholder) {
-                seq = AddToList(seq, NewAST(AST_STMTLIST, ifholder, NULL));
+                seq = AddToList(seq, iflist);
             } else {
-                elseholder->right = ifholder;
+                elseholder->right = iflist;
             }
-            ifholder->left = elseholder = NewAST(AST_THENELSE, casebody, NULL);
+            ifholder->right = elseholder = NewAST(AST_THENELSE, casebody, NULL);
             list = list->right;
         }
         AstReportDone(&saveinfo);
+        if (seq) {
+            *astptr = seq;
+        }
         break;
     }        
     case AST_COUNTREPEAT:
